<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="last_commit" />
    <string name="deploy_branch" />
    <string name="srceng_launcher_about">帮助</string>
    <string name="srceng_launcher_about_text">使用说明！\n\n命令行参数输入:-console -game csmos\n\n选择游戏资源路径后开始游戏即可！</string>
    <string name="srceng_launcher_launch">开始游戏</string>
    <string name="srceng_launcher_ok">OK</string>
    <string name="srceng_launcher_set">SET</string>
    <string name="srceng_launcher_error">Error</string>
    <string name="srceng_launcher_error_missing_obb_a">There are no</string>
    <string name="srceng_launcher_error_missing_obb_b">files on the path</string>
    <string name="srceng_launcher_error_test_write">Test write failed, all files will be stored in</string>
    <string name="srceng_launcher_error_no_permission">Without permissions game won\'t work</string>
    <string name="srceng_launcher_error_find_gameinfo">Couldn\'t find game resources. Did you set the path correctly?</string>
    <string name="srceng_launcher_command_args">命令行参数</string>
    <string name="srceng_launcher_env">Env</string>
    <string name="srceng_launcher_game_path">游戏资源路径</string>
    <string name="srceng_launcher_set_game_path">选择路径</string>
    <string name="srceng_launcher_game_menu">Game</string>
    <string name="srceng_launcher_touch_controls">Show touch controls</string>
    <string name="srceng_launcher_volume_buttons">Use volume buttons</string>
    <string name="srceng_launcher_volume_buttons_desc">Volume up button can bound as L_TRIGGER, and volume down as R_TRIGGER!!!</string>
    <string name="srceng_launcher_check_updates">Check updates</string>
    <string name="srceng_launcher_immersive_mode">Immersive mode</string>
    <string name="srceng_launcher_screen_resolution">Fixed screen resolution</string>
    <string name="srceng_game_hl2">Half-Life 2</string>
    <string name="srceng_game_hl2ep1">Half-Life 2 Episode 1</string>
    <string name="srceng_game_hl2ep2">Half-Life 2 Episode 2</string>
    <string name="srceng_game_portal">Portal</string>
    <string name="srceng_dir_choice_btn">确定路径</string>
    <string name="srceng_update">Update avalible!</string>
    <string name="srceng_launcher_error_find_platform">platform directory is missing!</string>
    <string name="srceng_app_name">CS:MOS</string>
</resources>
