<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="#ff252525"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/header"
        android:background="#ff3a3a3a"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <ImageView
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_launcher"/>
        <TextView
            android:textSize="25sp"
            android:textColor="#ffffffff"
            android:id="@+id/header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/srceng_app_name"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/footer"
        android:background="#ff3a3a3a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:textColor="#ffffffff"
            android:id="@+id/button_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/srceng_launcher_about"
            android:layout_weight="1"/>
        <Button
            android:textColor="#ffffffff"
            android:id="@+id/button_launch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/srceng_launcher_launch"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:id="@+id/center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header">
        <LinearLayout
            android:orientation="vertical"
            android:background="#ff353535"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:background="#ff212121"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">
                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/body"
                        android:background="#ff313131"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/srceng_launcher_command_args"/>
                        <EditText
                            android:id="@+id/edit_cmdline"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="3dp"
                            android:layout_marginBottom="5dp"
                            android:text="-console"
                            android:maxLines="1"
                            android:inputType="text"/>
                        <TextView
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/srceng_launcher_env"/>
                        <EditText
                            android:id="@+id/edit_env"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="3dp"
                            android:layout_marginBottom="5dp"
                            android:text="LIBGL_USEVBO=0"
                            android:maxLines="1"
                            android:inputType="text"/>
                        <TextView
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/srceng_launcher_game_path"/>
                        <EditText
                            android:id="@+id/edit_gamepath"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="3dp"
                            android:layout_marginBottom="5dp"
                            android:text="/sdcard/srceng/"
                            android:maxLines="1"
                            android:inputType="text"/>
                        <Button
                            android:textColor="#ffffffff"
                            android:id="@+id/button_gamedir"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="3dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/srceng_launcher_set_game_path"/>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
